--- a/FT-M2-master/05-Bundlers/homework/browser/style.css
+++ b/FT-M2-master/05-Bundlers/homework/browser/style.css
@@ -9,8 +9,12 @@
     top: 0;
     right: 0;
     width: 80px;
-    height: 120px;
+    height: 220px;
     background: black;
+    border: solid 2px black;
+    margin: 24px;
+    padding: 8px;
+
 }
 
 .marker {
